# js-sdl

./: .gitignore  CMakeLists.txt  README.md  SDL3-render-PNG-CMake.md  eslint.config.js  index.html  package.json  tsconfig.examples.json  tsconfig.json  vite-plugin-sdl-tsx.ts  vite.config.ts
@types/: box2d.d.ts  index.d.ts  package.d.ts  sdl3.d.ts
android/: gradle.properties  gradlew  gradlew.bat  keystore.properties.example  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/safeengine/jssdl/: MainActivity.java
android/app/src/main/res/drawable/: launch_icon.xml  launch_screen.xml
android/app/src/main/res/mipmap-anydpi/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/values-v31/: styles.xml
app/: box2d.c  js_box2d.c  js_sdl3.c  js_sdl3.h  main.c
engine/: AssetManager.ts  Audio.ts  Engine.ts  Input.ts  Localization.ts  PersistenceJSON.ts  SpriteFrameCache.ts  Viewport.ts  index.ts  sdl3.ts
engine/animation/: Easing.ts  Tween.ts  index.ts
engine/collider/: CollideComponent.ts  CollideSystem.ts  ColliderDebugRender.ts  index.ts
engine/components/: Button.ts  Camera2D.ts  CircleProgress.ts  Label.ts  Particles.ts  ProgressBar.ts  RichText.ts  Slider.ts  Sprite.ts  TextInput.ts  TiledMap.ts  TouchEventRegister.ts  UI.ts  Widget.ts
engine/core/: CameraRenderContext.ts  ComponentX.ts  Container.ts  Node.ts  NodePool.ts  Scene.ts  instantiate.ts
engine/dragonbones/: DragonBones.ts  display.ts  factory.ts  index.ts  loader.ts  math.ts  types.ts
engine/helper/: Intersection.ts  PointExtension.ts  assets-load.ts  constants.ts  math.ts  resource-load.ts  text-resource.ts
engine/hepler/: assets-load.ts
engine/physics/: Box2d.ts  PhysicsComponent.ts  PhysicsWorld.ts  Planck.ts  box2d.ts  index.ts
engine/render/: RenderCommandBuffer.ts
engine/skelform/: SkelForm.ts  index.ts  loader.ts  skelform-js.ts  types.ts
engine/spine/: SdlSpineTexture.ts  SpineBonesControl.ts  SpineSkeleton.ts  index.ts  loadSpineData.ts  types.ts
ios/: ExportOptions.plist  Info.plist.in
ios/Assets.xcassets/LaunchBackground.colorset/: Contents.json
ios/Assets.xcassets/LaunchIcon.imageset/: Contents.json
native/: js_box2d.c  js_box2d.h  js_sdl3.c  js_sdl3.h  main.c  vite.config.ts
res/: _skellington.skf
res/Map/: Map1.json
scripts/: android-env.sh  bootstrap-mobile-deps.sh  generate-ios-project.sh  generate-mobile-assets.mjs  package-android.sh  package-ios.sh  run-ios.sh  setup-android.sh  vite-plugin-sdl-tsx.ts
src/: Bullet.ts  Bullet.tsx  GameScene.ts  GameScene.tsx  HomeScene.ts  HomeScene.tsx  LoadingScene.ts  Player.ts  Player.tsx  index.ts  main.js  main.ts  sdl3.d.ts
src/engine/: AssetManager.ts  Engine.ts  Input.ts  Localization.ts  index.ts
src/engine/animation/: Tween.ts
src/engine/components/: Button.ts  Label.ts  LabelRenderer.ts  Physics.ts  Sprite.ts  SpriteRenderer.ts  UI.ts
src/engine/core/: Component.ts  Container.ts  Node.ts  Scene.ts  Transform.ts  instantiate.ts
src/engine/dragonbones/: index.ts
src/engine/ecs/: DamageSystem.ts  ECSComponents.ts  ECSManager.ts  MovementSystem.ts
src/engine/physics/: Box2d.ts
tests/: asset-manager-native-cache.test.ts  camera-2d.test.ts  circle-progress.test.ts  collider.test.ts  instantiate.test.ts  label-size.test.ts  localization.test.ts  native_binding_tests.c  node-events.test.ts  node-pool.test.ts  node-schedule.test.ts  node-transform.test.ts  node-zindex.test.ts  particles.test.ts  persistence-json.test.ts  planck.test.ts  render-command-buffer.test.ts  richtext.test.ts  scene-touch.test.ts  skelform.test.ts  slider.test.ts  spine-bones-control.test.ts  sprite-frame-cache.test.ts  sprite-size.test.ts  tiled-map.test.ts  ui-layout-dirty.test.ts  viewport.test.ts  widget.test.ts
tsx/: Bullet.tsx  GameScene.tsx  HomeScene.tsx  Player.tsx  index.html  jsx-runtime.ts  main.ts  vite-plugin-sdl-tsx.ts  vite.config.ts
tsx/dragonbones/: index.ts
tsx/planck/: index.ts
web/: box2d.ts  index.html  sdl3.ts  vite-plugin-sdl-tsx.ts  vite.config.ts
